--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "mongodb": "^6.19.0",
     "pdf-lib": "^1.17.1",
     "tesseract.js": "^6.0.1"
   }
